some Bugfixes for HTML5 implementations
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1344 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5session/index.html
+++ b/html5session/index.html
@@ -202,13 +202,12 @@ function selectDepartment(depNumber) {
 			}
 			employees += department.employees[i].name + "</option>";
 		} else {
-			manager += "<input type=\"button\" name=\""
-				+ department.employees[i].name
+			manager += "<a "
 				+ "\" value=\"" 
 				+ department.employees[i].name
 				+ "\" onclick=\"selectEmployee('" 
 				+ i
-				+ "')\"><br>";
+				+ "')\"><u>" + department.employees[i].name + "</u></a><br>";
 		}
 	}
 	employees += "</select>";
