--- a/html5local/index.html
+++ b/html5local/index.html
@@ -202,13 +202,12 @@ function selectDepartment(depNumber) {
 			}
 			employees += department.employees[i].name + "</option>";
 		} else {
-			manager += "<input type=\"button\" name=\""
-				+ department.employees[i].name
+			manager += "<a "
 				+ "\" value=\"" 
 				+ department.employees[i].name
 				+ "\" onclick=\"selectEmployee('" 
 				+ i
-				+ "')\"><br>";
+				+ "')\"><u>" + department.employees[i].name + "</u></a><br>";
 		}
 	}
 	employees += "</select>";
@@ -269,7 +268,7 @@ function selectDepartmentsForCompany(company) {
 	document.querySelector('#back').innerHTML = "";
 
 	var total = totalCompany(company);
-	document.querySelector('#total').innerHTML = "<br>Total: " + total + "<input type=\"button\" name=\"cut\" value=\"cut\" onclick=\"cutCompany()\">";
+	document.querySelector('#total').innerHTML = "<br>Total: " + total + " <input type=\"button\" name=\"cut\" value=\"cut\" onclick=\"cutCompany()\">";
 }
 
 // ------------------------------------------------------------------------ cut
