--- a/html5local/department.html
+++ b/html5local/department.html
@@ -9,12 +9,12 @@
 <body>
 
 <script type="text/javascript">
-// init the storage object
-var storageObject = localStorage;
+
 </script>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="controller.js"></script>
+<script type="text/javascript" src="departmentView.js"></script>
 <script type="text/javascript" src="model.js"></script>
 
 <center>
@@ -24,22 +24,24 @@ function process() {
     var parameters = location.search.substring(1).split("&");
 
 	var temp = parameters[0].split("=");
-	departmentName = unescape(temp[1]);
+	departmentId = unescape(temp[1]);
 }
 process();
 
-document.write("<h1>" + model.getCompanyName() + "</h1>");
-document.write("<h3>" + departmentName + "</h3>");
+document.write("<h3>" + model.getDepartmentName(departmentId) + "</h3>");
 
 </script>
 
+<div id="headline" name="headline"></div><br>
+<div id="subheadline" name="subheadline"></div><br>
 <div id="content" name="content"></div><br>
 <div id="total" name="total"></div><br>
 <div id="test" name="test"></div><br>
 
 <script type="text/javascript">
+model.getCompanyName();
 
-var departmentList = model.getSubDepartments(departmentName);
+var departmentList = model.getSubDepartments(departmentId);
 
 var content = "Departments: <br>";
 content += "<form action=\"select1.htm\">";
@@ -61,7 +63,13 @@ content += "</p>";
 content += "<input type=\"button\" value=\"select\" onclick=\"controller.selectDepartment(this.form.Departments.options[this.form.Departments.selectedIndex].value)\" >";
 content += "</form>";
 
-var employeeList = model.getEmployees(departmentName);
+content += "<br><br>";
+
+var manager = model.getEmployees(departmentId, true);
+
+content += "Manager: " + manager[0];
+
+var employeeList = model.getEmployees(departmentId, false);
 
 content += "<br><br>Employees: <br>";
 content += "<form action=\"select1.htm\">";
@@ -86,8 +94,8 @@ content += "</form>";
 document.querySelector('#content').innerHTML = content;
 
 function refreshTotal() {
-	var total = model.totalDepartment(departmentName);
-	document.querySelector('#total').innerHTML = "<br>Total: " + total + " <input type=\"button\" name=\"cut\" value=\"cut\" onclick=\"controller.cutDepartment('" + departmentName + "')\">";
+	var total = model.totalDepartment(departmentId);
+	document.querySelector('#total').innerHTML = "<br>Total: " + total + " <input type=\"button\" name=\"cut\" value=\"cut\" onclick=\"controller.cutDepartment(" + departmentId + ")\">";
 }
 refreshTotal();
 
