html5 local refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1381 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/company.html
+++ b/html5local/company.html
@@ -8,18 +8,17 @@
 </head>
 <body>
 
-<script type="text/javascript">
+<center>
+<h1>101Companies HTML5 implementation with local storage</h1>
 
-
-
-</script>
+<h3>Company</h3>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="companyController.js"></script>
 <script type="text/javascript" src="companyView.js"></script>
 <script type="text/javascript" src="companyModel.js"></script>
 
-<center>
+
 
 <div id="headline" name="headline"></div><br>
 <div id="content" name="content"></div><br>
