beginning to implement employee view
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1386 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/department.html
+++ b/html5local/department.html
@@ -30,8 +30,7 @@ process();
 
 </script>
 
-<div id="content" name="content"></div><br>
-<div id="test" name="test"></div>
+<div id="content" name="content"></div>
 
 <script type="text/javascript">
 model.loadDepartment(departmentId);
