html5 local finished
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1387 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/company.html
+++ b/html5local/company.html
@@ -22,7 +22,9 @@
 <div id="reset" name="reset"></div>
 
 <script type="text/javascript">
+//model.reset();
 model.loadCompany();
+
 </script>
 </center>
 
