--- a/html5local/employee.html
+++ b/html5local/employee.html
@@ -11,7 +11,7 @@
 <center>
 <h1>101Companies HTML5 implementation with local storage</h1>
 
-<h3>Department</h3>
+<h3>Employee</h3>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="employeeController.js"></script>
