html5 finished refactoring local storage
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1388 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/company.html
+++ b/html5local/company.html
@@ -1,7 +1,5 @@
 <!DOCTYPE HTML>
-<!-- This is the code for the 101companies application written in HTML 5 & JavaScript -->
-
-<!-- CLIENT-SIDE, SESSION-STORAGE -->
+<!-- Company view -->
 <html>
 <head>
 
@@ -9,9 +7,7 @@
 <body>
 
 <center>
-<h1>101Companies HTML5 implementation with local storage</h1>
-
-<h3>Company</h3>
+<script type="text/javascript" src="head.js"></script>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="companyController.js"></script>
@@ -19,10 +15,10 @@
 <script type="text/javascript" src="companyModel.js"></script>
 
 <div id="content" name="content"></div><br>
-<div id="reset" name="reset"></div>
+<div id="reset" name="reset"></div><br>
+<div id="test" name="test"></div><br>
 
 <script type="text/javascript">
-//model.reset();
 model.loadCompany();
 
 </script>
