--- a/html5local/employee.html
+++ b/html5local/employee.html
@@ -1,7 +1,5 @@
 <!DOCTYPE HTML>
-<!-- This is the code for the 101companies application written in HTML 5 & JavaScript -->
-
-<!-- CLIENT-SIDE, SESSION-STORAGE -->
+<!-- employee view -->
 <html>
 <head>
 
@@ -9,9 +7,7 @@
 <body>
 
 <center>
-<h1>101Companies HTML5 implementation with local storage</h1>
-
-<h3>Employee</h3>
+<script type="text/javascript" src="head.js"></script>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="employeeController.js"></script>
