html5 indexed db
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1392 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5indexedDatabase/department.html
+++ b/html5indexedDatabase/department.html
@@ -29,7 +29,7 @@ process();
 <div id="content" name="content"></div>
 
 <script type="text/javascript">
-model.loadDepartment(departmentId);
+controller.loadDepartment(departmentId);
 </script>
 </center>
 
