html5 indexeddb finished
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1396 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5indexedDatabase/company.html
+++ b/html5indexedDatabase/company.html
@@ -9,6 +9,8 @@
 <center>
 <script type="text/javascript" src="head.js"></script>
 
+<h3>Company</h3>
+
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="companyController.js"></script>
 <script type="text/javascript" src="companyView.js"></script>
