--- a/html5indexedDatabase/employee.html
+++ b/html5indexedDatabase/employee.html
@@ -9,6 +9,8 @@
 <center>
 <script type="text/javascript" src="head.js"></script>
 
+<h3>Employee</h3>
+
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="employeeController.js"></script>
 <script type="text/javascript" src="employeeView.js"></script>
@@ -29,7 +31,7 @@ process();
 <div id="content" name="content"></div>
 
 <script type="text/javascript">
-model.loadEmployee(employeeId);
+controller.loadEmployee(employeeId);
 </script>
 
 </body>
