html5 local bugfixes
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1397 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/employee.html
+++ b/html5local/employee.html
@@ -9,6 +9,8 @@
 <center>
 <script type="text/javascript" src="head.js"></script>
 
+<h3>Employee</h3>
+
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="employeeController.js"></script>
 <script type="text/javascript" src="employeeView.js"></script>
