--- a/html5local/company.html
+++ b/html5local/company.html
@@ -9,6 +9,8 @@
 <center>
 <script type="text/javascript" src="head.js"></script>
 
+<h3>Company</h3>
+
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="companyController.js"></script>
 <script type="text/javascript" src="companyView.js"></script>
