--- a/html5local/department.html
+++ b/html5local/department.html
@@ -9,6 +9,8 @@
 <center>
 <script type="text/javascript" src="head.js"></script>
 
+<h3>Department</h3>
+
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="departmentController.js"></script>
 <script type="text/javascript" src="departmentView.js"></script>
