html5 session storage some new styles
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1442 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5session/company.html
+++ b/html5session/company.html
@@ -3,11 +3,15 @@
 <html>
 <head>
 
+<link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 <body>
 
 <center>
 <script type="text/javascript" src="head.js"></script>
+
+<h3>Company</h3>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="companyController.js"></script>
