--- a/html5session/employee.html
+++ b/html5session/employee.html
@@ -3,11 +3,15 @@
 <html>
 <head>
 
+<link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 <body>
 
 <center>
 <script type="text/javascript" src="head.js"></script>
+
+<h3>Employee</h3>
 
 <script type="text/javascript" src="company.js"></script>
 <script type="text/javascript" src="employeeController.js"></script>
