--- a/html5ajax/employee.html
+++ b/html5ajax/employee.html
@@ -25,8 +25,6 @@ function process() {
 
 	var temp = parameters[0].split("=");
 	employeeId = unescape(temp[1]);
-	temp = parameters[1].split("=");
-	isManager = unescape(temp[1]);
 }
 process();
 
@@ -35,7 +33,7 @@ process();
 <div id="content" name="content"></div>
 
 <script type="text/javascript">
-controller.loadEmployee(employeeId, isManager);
+controller.loadEmployee(employeeId);
 </script>
 
 </body>
