html5 ajax refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1521 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/index.html
+++ b/html5ajax/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE HTML>
-<!-- This is the code for the 101companies application written in HTML 5 & JavaScript -->
-
-<!-- CLIENT-SIDE, SESSION-STORAGE -->
+<!--
+To change this template, choose Tools | Templates
+and open the template in the editor.
+-->
+<!DOCTYPE html>
 <html>
-<head>
-
-</head>
-<body>
-
-<script type="text/javascript">
-
-location.href = "company.html";
-
-</script>
-
-</body>
+    <head>
+        <title>101companies application</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>
+        <script type="text/javascript">
+            location.href = "client/company.html";
+        </script>
+    </body>
 </html>
