html5 ajax refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1523 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/client/department.html
+++ b/html5ajax/client/department.html
@@ -11,6 +11,7 @@ and open the template in the editor.
 
         <script type="text/javascript" src="javascript/controller.js"></script>
         <script type="text/javascript" src="javascript/model/XMLHttpRequest.js"></script>
+        <script type="text/javascript" src="javascript/messages/errors.js"></script>
 
         <script type="text/javascript" src="javascript/model/departmentModel.js"></script>
         <script type="text/javascript" src="javascript/view/departmentView.js"></script>
