--- a/html5ajax/client/company.html
+++ b/html5ajax/client/company.html
@@ -21,7 +21,7 @@
                 <tr><th colspan="3">Company View</th></tr>
 
                 <tr>
-                    <td><div id="name">Name:</div></td>
+                    <td><div id="name"id>Name:</div></td>
                     <td><input type="text" class="text" name="name"/><div id="namefailure"></div></td>
                     <td><input type="button" class="button" value="save" 
                                onClick="controller.changeName(this.form.name.value)"/></td>                      
