--- a/html5tree/index.html
+++ b/html5tree/index.html
@@ -17,7 +17,9 @@
     <body>
         <table>
             <tr><th colspan="2">101Companies application</th></tr>
-            <tr><td class="tree"><div id="tree">tree</div></td><td class="view"><div id="view"></div></td></tr>
+            <tr><td class="tree"><div id="tree">loading tree ...</div></td><td class="view">
+                    
+                </td></tr>
         </table>
         
         <script type="text/javascript">
